# rubik

./: Alghoritms.cpp  Brick.cpp  Brick.h  CMakeLists.txt  Camera.cpp  Camera.h  Cube.cpp  Cube.h  EventHelper.cpp  EventHelper.h  Events.cpp  Events.h  FileManager.cpp  FileManager.h  Window.cpp  Window.h  WrapperClass.cpp  WrapperClass.h  main.cpp
